--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="~Voltmcdev, Volt Discord, Minetown SMP">
     <meta name="description" content="🚧 Under Development...">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Into The Dark</title>
+    <title>~Volt</title>
     <link rel="stylesheet" href="intothedark.css" media="screen">
 <link rel="stylesheet" href="Into-The-Dark-~-iPuppyYT.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
