--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body data-home-page="Into-The-Dark-~-iPuppyYT.html" data-home-page-title="Into The Dark ~ iPuppyYT" class="u-body u-overlap u-overlap-contrast u-xl-mode"><header class="u-black u-clearfix u-header u-sticky u-sticky-52e1 u-header" id="sec-fdab"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="1280" data-image-height="1280"></div>
-        <h1 class="u-align-center u-text u-text-default u-text-1">bruh<span style="font-weight: 700;"></span>
+        <h1 class="u-align-center u-text u-text-default u-text-1">~Volt<span style="font-weight: 700;"></span>
         </h1>
         <nav class="u-menu u-menu-dropdown u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
